--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><link rel="icon" href="data:">
-<title>llm_client for llm_server</title>
+<title>llm chat with llm_proxy</title>
 </head><body>
 
-<h1>llm_client for llm_server</h1>
+<h1>llm chat with llm_proxy</h1>
 <input id="comment" type="text" size=50><button id="btn">send</button>
 <div id="response"></div>
 <hr>
-<a href=http://github.com/code4fukui/llm_client>src on GitHub</a><br>
+<a href=http://github.com/code4fukui/llm_proxy>src on GitHub</a><br>
 
 <script type="module">
 import { llm } from "./llm.js";
