--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,7 @@ AIの設定
 <input type=submit value="送信"><br>
 <!--<button id=btncls>クリア</button>-->
 </form>
-<a href=https://github.com/code4fukui/ai_chat/>src on GitHub</a> by <a href=https://openai.com/api/>OpenAI API</a> (<a href=qa.html>simple qa</a> / <a href=talk.html>talk</a> / <a href=talk_en.html>talk in English</a>)<br>
+<a href=https://github.com/code4fukui/llm_proxy/>src on GitHub</a><br>
 </div>
 
 
